hphp/hack/test/package/package_access/cross_package_access_with_crosspackage_attr_bad2.php.exp
Parsing[1002] This is an invalid use of '__CrossPackage' because this is not a literal string expression [1]

cross_package_access_with_crosspackage_attr_bad2.php:4:18
    2 |
    3 |
[1] 4 | <<__CrossPackage(123)>> // parse error
    5 | function test() : void {}

1 error found.
