hphp/hack/test/package/package_access/cross_package_access_with_crosspackage_attr_bad2.php
<?hh


<<__CrossPackage(123)>> // parse error
function test() : void {}
